- made timeline take up half the page - prevent overscroll on page - added todo.md - added constants for specifying when ticks and labels are visible - labels go in their own container - added BCE/CE to years

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 
 html,
 body {
-  overscroll-behavior-x: none;
+  overscroll-behavior: none;
 }
 
 body {
@@ -21,23 +21,24 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: stretch;
   height: 100vh;
+}
+
+#timeline {
+  background-color: var(--timeline-bg-color);
+  width: 100%;
+  flex: 0 1 50%;
+  height: 50%;
+}
+
+#event_detail {
+  flex: 0 1 50%;
 }
 
 #mouse_year {
   color: var(--mouse-year-color);
   display: block;
   text-align: center;
-  margin: 0 auto 1rem;
-}
-
-#timeline_container button {
-  width: 48px;
-}
-
-#timeline {
-  background-color: var(--timeline-bg-color);
-  width: 100%;
-  height: 256px;
+  margin: 1rem auto;
 }
